	-c: removed memory leak in lnf_lookup_map and lnf_close (tnaks for Lukas
	    Hutak)
	-c: fixed size of some fields (patch submitted by Lukas Hutak)
	-c: API change - tha value of LNF_AGGR_KEY is 0x0008
	-c: API change - new LNF_AGGR_AUTO for autodetection aggregation mode
	-nfdumpp: new -w and -o options 
	-nfdumpp: new modular output system 
	-nfdumpp: invalid dispaly of duration field 
	

1.17 2015-10-27
	-perl: added test t/09-instances.t
	-perl: test for calculated items in test t/08-aggreg-sort.t
	-perl: net option CompatMode
	-c: time fields can be user as aggregation key with alligned time
	-c: new lnf_mem option LNF_OPT_COMP_STATSCMP 
	-c: sort support for calculated fields
	-c: removed bug when thread key was nor released after lnf_mem release
	-c: LNF_CALC_*PS items returns LNF_ERR_NAN when division by 0 is detected 
	-c: new flag LNF_APPEND in lnf_open for open file in append mode (not supported by nfdump format)
	-c: LNF_FLD_INFO_SIZE can be returned by lnf_fld_info
	-c: added LNF_<type>_T with basic types definitions used by libnf 
	-c: removed bug when memheap crashes after mixing pair and non pair 
	    fields (Thanks to Jan Wrona)
	-c: new fields LNF_FLD_INGRESS_ACL and LNF_FLD_EGRESS_ACL representing 
	    all fields *_ACL_ID, *_ACE_ID, *_XACE_ID in one structure lnf_acl_t
	-nfdumpp: redesigned command options 

1.16 2015-09-07
	-c: added license and copyright information 
	-c: added field event (thanks to Artem Buglak)
	-perl: module allows to sort records without aggregation (list mode)
	-c: bug when sorting same values (Thanks to Jan Wrona) 
	-c: libnf-info is compiled statically now (Thanks to Lukas Hutak)

1.15 2015-07-26
	- c: new function lnf_mem_setopt for configuring some lnf_mem options 
	- c: lnf_mem_t can be switched into list mode via 
	     lnf_mem_setopt(LNF_OPT_LISTMODE, ...); In this mode there is no 
		 aggregation of items; mode can be used for sorting records 
	- c: improved merge_threads (removed deadlock)